--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 :root {
   --cinza: #aaa;
   --vermelha: #000000;
-  --vermelha-escura: #af303f;
+  --vermelha-escura: rgb(0, 0, 0);
   --branca: #fff;
   --luz: rgb(0, 0, 0);
 }
